--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -15,14 +15,14 @@
     <div class="width_a margin_a">
       <div class="float_left width_l1">
         <div class="float_left width_l1">
-          <img src="img_g.jpeg" alt="Guitar" height="75px">
+          <img src="img_g.jpeg" alt="Guitar" height="75px" width="100%">
         </div>
         <div class="float_right width_r1">
           <div class="padding font_size bg_color">SoundAMP</div>
         </div>
         <div style="clear: both;"></div>
       </div>
-      <div class="padding">
+      <div class="padding1">
         <div class="float_right width_right">
           <div class="float_left width_l2">
             <a href class="bg_color">HTML Templates</a>
@@ -48,37 +48,48 @@
       </div>
     </div>
   </header>
-  <div class="width_b margin_a">
-    <div class="padding">
-      <img src="img.jpeg" height="130px" width="100%">
+  <div class="bg_image text_align1 bg_color width_b margin_a">
+    <h1 class=" padding3 margin_r1">All Events</h1>
+  </div>
+  <div class="width_b margin_a ">
+    <div class="float_left widthl3">
+      <div class="margin_1 border margin_r2 bg_color2">
+        <img src="img_1.jpeg" alt="night laser" height="200px" width="100%">
+        <div class="width_c margin_a padding5 margin_l3">
+          <div class="font_color">10/05/2018 <br></div>
+          <div class="font_size2 padding6">Night Laser Show <br></div>
+          <div class="font_color">#hip-hop #rnb #dance <br></div>
+          <div class="padding6 linespacing font_color">We are happy to announce tis
+            special laser show.<br></div>
+          <div class="button1 text_align width_a margin_a margin_2">See more...</div>
+        </div>
+      </div>
+    </div>
+    <div class="float_left widthl3">
+      <div class="margin_1 border margin_r2 bg_color2">
+        <img src="img_2.jpeg" alt="live music" height="200px" width="100%">
+        <div class="width_c margin_a padding5 margin_l3">
+          <div class="font_color">14/05/2018 <br></div>
+          <div class="font_size2 padding6">Live music <br></div>
+          <div class="font_color">#live #rock #alternative <br></div>
+          <div class="padding6 linespacing font_color">special events for our rock fans! live music show. <br></div>
+          <div class="button1 text_align width_a margin_a ">See more...</div>
+        </div>
+      </div>
+    </div>
+    <div class="float_left widthl3">
+      <div class="margin_1 border marginr2 bg_color2">
+        <img src="img_3.jpeg" alt="Master class" height="100px" width="100%">
+        <div>
+          <div>10/04/2018</div>
+          <div>DJ-Master class</div>
+          <div>#dj #master-class</div>
+          <div>DJ woodsmell will teach you new tricks: please sign up</div>
+          <div></div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="width_b margin_a margin">
-    <div class="float_left width_l3">
-      <div class="float_left width_l3">
-        <img src="img_1.jpeg" height="170px" width="95%">
-        <div class="txt">
-          <div class="padding2 ">10/05/2018</div>
-          <div class="txt_size ">Night laser Show</div>
-          <div class="padding2 ">#hip-hop #rnb #dance</div>
-          <div class="font">We are happy to announce this
-            special laser show.</div>
-        </div>
-        <div class="button1">See more...</div>
-      </div>
-      <div class="float_right width_r3">
-        <img src="img_2.jpeg" height="170px" width="95%">
-      </div>
-    </div>
-    <div class="float_right width_r3">
-      <div class="float_left width_l3">
-        <img src="img_3.jpeg" height="170px" width="95%">
-      </div>
-      <div class="float_right width_r3">
-        <img src="img_4.jpeg" height="170px" width="95%">
-      </div>
-    </div>
-    <div style="clear: both;"></div>
   </div>
 </body>
 
