final bootstrap file

--- a/sarupriya/Bootstrap/index.html
+++ b/sarupriya/Bootstrap/index.html
@@ -15,13 +15,13 @@
     <div class="container-fluid bg_a">
         <div class="container">
             <div class="row p-2 text text-white">
-                <div class="col-md-6 col-sm-6 col- text-centre txt_align txt_align1 txt_align2 txt_align3">
+                <div class="col-md-6 col-sm-6 col- text-centre txt_align color3">
                     <div>
-                        <i class="fa-solid fa-phone"></i>
+                        <i class="fa-solid fa-phone text text-white"></i>
                         +62 088 999 123
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-6 col- text-end txt_align txt_align1 txt_align2 txt_align3">
+                <div class="col-md-6 col-sm-6 col- txt_r txt_align">
                     <i class="fa-brands fa-facebook-f width_a"></i>
                     <i class="fa-brands fa-twitter width_a"></i>
                     <i class="fa-brands fa-linkedin-in width_a"></i>
@@ -33,25 +33,36 @@
         </div>
     </div>
     <div class="container">
-        <div class="row p-3">
-            <div class="col-md-5 col-sm-12 col- font_size1 bold">
-                <i class="fa-solid fa-square text text-danger font_size"></i><i
-                    class="fa-solid fa-square color_a font_size"></i>
+        <div class="row p-3 txt_align">
+            <div class="col-md-5 col-sm-12 col- bold font_f">
+                <i class="fa-solid fa-square text text-danger font_bc"></i><i
+                    class="fa-solid fa-square color_a font_bc"></i>
                 ETERNA
             </div>
-            <div class="col-md-7 col-sm-12 text-end">
-                <button type="button" class="btn btn-danger bold font_ab"><a><i class="fa-solid fa-house"></i>
+            <div class="col-md-2 col-sm-12 col- txt_r p-2 txt_align">
+                <button type="button" class="bg_o bold font_ab border_n text text-white"><a><i 
+                    class="fa-solid fa-house"></i>
                         Home <i class="fa-solid fa-angle-down font_c"></i></a>
                 </button>
-                <button type="button" class="btn btn-white font_bc"><a>Feature <i
-                            class="fa-solid fa-angle-down font_c"></i></a></button>
-                <button type="button" class="btn btn-white font_bc"><a>Pages <i
-                            class="fa-solid fa-angle-down font_c"></i></a></button>
-                <button type="button" class="btn btn-white font_bc"><a>Portfolio <i
-                            class="fa-solid fa-angle-down font_c"></i></a></button>
-                <button type="button" class="btn btn-white font_bc"><a>Blog <i
-                            class="fa-solid fa-angle-down font_c"></i></a></button>
-                <button type="button" class="btn btn-white font_bc"><a>Contact </a></button>
+            </div>
+            <div class="col-md-1 col-sm-12 col- txt_r p-2 txt_align">
+                <div class="font_bc margin_a">Feature <i
+                            class="fa-solid fa-angle-down font_c"></i></div>
+            </div>
+            <div class="col-md-1 col-sm-12 col- txtalign p-2">
+                <div type="button" class="font_bc">Pages <i
+                            class="fa-solid fa-angle-down font_c"></i></div>
+            </div>
+            <div class="col-md-1 col-sm-12 col- p-2">
+                <div type="button" class="font_bc">Portfolio <i
+                            class="fa-solid fa-angle-down font_c"></i></div>
+            </div>
+            <div class="col-md-1 col-sm-12 txtalign col- p-2">
+                <div type="button" class="font_bc">Blog <i
+                            class="fa-solid fa-angle-down font_c"></i></div>
+            </div>
+            <div class="col-md-1 col-sm-12 col- p-2">
+                <div type="button" class="font_bc">Contact </div>
             </div>
         </div>
     </div>
@@ -67,34 +78,34 @@
     </div>
     <div class="container-fluid">
         <div class="container p-5 border_b">
-            <div class="row ">
-                <div class="col-md-1 col-sm-6 p-2">
-                    <img src="img1.png" alt="Star" height="55px" width="80%">
+            <div class="row txt_align">
+                <div class="col-md-1 col-sm-12 p-2 width1 margin1 txt_align">
+                    <img src="img1.png" alt="Star" height="50px" width="70%">
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="font_f">
+                <div class="col-md-3 col-sm-12 nofloat">
+                    <div class="font_f color6">
                         High <span class="bold ">Quality</span>
                     </div>
                     <div class="font_d pt-2 color2">Lorem ipsum dolor sit amet,has ei ipsums castvoda deseruisse am
                         sea facilities.</div>
                     <div class="bold font_e pt-1">Learn more</div>
                 </div>
-                <div class="col-md-1 col-sm-6 pt-2 nofloat nofloat1 nofloat2 nofloat3">
-                    <img src="img2.png" alt="dropbox" height="55px" width="87%">
+                <div class="col-md-1 col-sm-12 pt-2 nofloat width1 margin1 txt_align">
+                    <img src="img2.png" alt="dropbox" height="48px" width="77%">
                 </div>
-                <div class="col-md-3 col-sm-6 nofloat nofloat1 nofloat2 nofloat3">
-                    <div class="font_f">
+                <div class="col-md-3 col-sm-12 nofloat">
+                    <div class="font_f color6">
                         Rich of <span class="bold">Features</span>
                     </div>
                     <div class="font_d pt-2 color2">Lorem ipsum dolor sit amet,has ei ipsums castvoda deseruisse am
                         sea facilities.</div>
                     <div class="bold font_e pt-1">Learn more</div>
                 </div>
-                <div class="col-md-1 col-sm-6 pt-1 nofloat nofloat1 nofloat2 nofloat3">
-                    <img src="img3.png" alt="monitor" height="65px" width="100%">
+                <div class="col-md-1 col-sm-12 pt-1 nofloat width1 margin1 txt_align">
+                    <img src="img3.png" alt="monitor" height="60px" width="100%">
                 </div>
-                <div class="col-md-3 col-sm-6 nofloat nofloat1 nofloat2 nofloat3">
-                    <div class="font_f">
+                <div class="col-md-3 col-sm-12 nofloat">
+                    <div class="font_f coolor6">
                         Modern <span class="bold">Design</span>
                     </div>
                     <div class="font_d pt-2 color2">Lorem ipsum dolor sit amet,has ei ipsums castvoda deseruisse am
@@ -106,7 +117,7 @@
     </div>
     <div class="container-fluid">
         <div class="container p-4 txtalign">
-            <div class="font_f">Our <span class="bold">Pricing</span></div>
+            <div class="font_f color6">Our <span class="bold">Pricing</span></div>
             <div class="font_d pt-2 color2">Lorem ipsum dolor sit amet,has ei ipsums castvoda deseruisse am
                 sea facilities.</div>
         </div>
@@ -114,7 +125,7 @@
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 nofloat">
                     <div class="bg_j p-4">
                         <div class="pb-4 txtalign font_f color3">Very
                             <span class="bold text text-white">Basic</span>
@@ -136,12 +147,12 @@
                     </div>
                     <div class="bg_a p-4">
                         <div class="txtalign">
-                            <button type="button" class="bg_b text text-white border_n p-1 width_b "> <i
+                            <button type="button" class="bg_button text text-white border_n p-1 width_b "> <i
                                     class="fa-solid fa-angle-down font_size bold"></i> Sign Up </button>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-6 nofloat">
                     <div class="bg_j p-4">
                         <div class="pb-4 txtalign font_f color3">Simple
                             <span class="bold text text-white ">Choice</span>
@@ -163,12 +174,12 @@
                     </div>
                     <div class="bg_a p-4">
                         <div class="txtalign">
-                            <button type="button" class="bg_b text text-white border_n p-1 width_b "> <i
+                            <button type="button" class="bg_button text text-white border_n p-1 width_b "> <i
                                     class="fa-solid fa-angle-down font_size bold"></i> Sign Up </button>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 nofloat nofloat1 nofloat2 nofloat3">
+                <div class="col-md-3 col-sm-6 nofloat">
                     <div class="bg_k p-4">
                         <div class="pb-4 txtalign font_f color3">Special
                             <span class="bold text text-white ">Choice</span>
@@ -190,12 +201,12 @@
                     </div>
                     <div class="bg_f p-4">
                         <div class="txtalign">
-                            <button type="button" class="bg_b text text-white border_n p-1 width_b "> <i
+                            <button type="button" class="bg_button text text-white border_n p-1 width_b "> <i
                                     class="fa-solid fa-angle-down font_size bold"></i> Sign Up </button>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 nofloat nofloat1 nofloat2 nofloat3">
+                <div class="col-md-3 col-sm-6 nofloat">
                     <div class="bg_dark1 p-4">
                         <div class="bg_dark1 pb-4 txtalign font_f color3">Just
                             <span class="bold text text-white">Happy</span>
@@ -217,7 +228,7 @@
                     </div>
                     <div class="bg_a p-4">
                         <div class="txtalign">
-                            <button type="button" class="bg_b text text-white border_n p-1 width_b "> <i
+                            <button type="button" class="bg_button text text-white border_n p-1 width_b "> <i
                                     class="fa-solid fa-angle-down font_size bold"></i> Sign Up </button>
                         </div>
                     </div>
@@ -226,12 +237,12 @@
         </div>
     </div>
     <div class="txtalign p-5">
-        <div class="font_g">What people <span class="bold">saying</span> about us</div>
+        <div class="font_g color6">What people <span class="bold">saying</span> about us</div>
     </div>
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-md-2 col-sm-12 text-end">
+                <div class="col-md-2 col-sm-12 txt_r txt_align">
                     <i class="fa-solid fa-quote-left font_h"></i>
                 </div>
                 <div class="col-md-8 col-sm-12 color4 txtalign font_i linespacing">
@@ -240,7 +251,7 @@
                     interdum lorem vutputate.<br> Aliquam a orci quis nisi sagittis. Etiam
                     adipiscing justo quis feugiat.
                 </div>
-                <div class="col-md-2 col-sm-12"><i class="fa-solid fa-quote-right font_h"></i>
+                <div class="col-md-2 col-sm-12 txt_align"><i class="fa-solid fa-quote-right font_h"></i>
                 </div>
             </div>
         </div>
@@ -260,16 +271,16 @@
     <div class="container-fluid pb-5">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-12 nofloat width2 margin1">
                     <img src="img5.jpg" alt="Image 1" height="175px" width="100%">
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-3 col-sm-12 nofloat width2 margin1">
                     <img src="img6.jpg" alt="Image 1" height="175px" width="100%">
                 </div>
-                <div class="col-md-3 col-sm-6 nofloat nofloat1 nofloat2 nofloat3">
+                <div class="col-md-3 col-sm-12 nofloat width2 margin1">
                     <img src="img7.jpg" alt="Image 1" height="175px" width="100%">
                 </div>
-                <div class="col-md-3 col-sm-6 nofloat nofloat1 nofloat2 nofloat3">
+                <div class="col-md-3 col-sm-12 nofloat width2 margin1">
                     <img src="img8.jpg" alt="Image 1" height="175px" width="100%">
                 </div>
             </div>
@@ -279,34 +290,34 @@
         <div class="container p-5">
             <div class="row">
                 <div class="col-md-4 col-sm-12 text text-white">
-                    <div class="bold font_f">Browser pages</div>
-                    <div class="font_e color3 pt-3">our company</div>
-                    <div class="font_e color3">Terms and conditions</div>
-                    <div class="font_e color3">Privacy policy</div>
-                    <div class="font_e color3">Press release</div>
-                    <div class="font_e color3">What we have done</div>
-                    <div class="font_e color3">Our support forum</div>
+                    <div class="bold font_f ">Browser pages</div>
+                    <div class="font_e color32 pt-3 pb-2">our company</div>
+                    <div class="font_e color32 pb-2">Terms and conditions</div>
+                    <div class="font_e color32 pb-2">Privacy policy</div>
+                    <div class="font_e color32 pb-2">Press release</div>
+                    <div class="font_e color32 pb-2">What we have done</div>
+                    <div class="font_e color3 pb-2">Our support forum</div>
                 </div>
                 <div class="col-md-4 col-sm-12 text text-white">
                     <div class="bold font_f">Get in touch</div>
                     <div class="font_e color5 pt-3 bold">Eterna company inc.</div>
-                    <div class="font_e color3">Somestreet 200 VW,Suite village A001</div>
-                    <div class="font_e color3">Jakarta 1:426 indonesia</div>
-                    <div class="font_e color3">
+                    <div class="font_e color32">Somestreet 200 VW,Suite village A001</div>
+                    <div class="font_e color32">Jakarta 1:426 indonesia</div>
+                    <div class="font_e color32">
                         <i class="fa-solid fa-phone pt-3"></i> (123)456-7890 - (123)555-7891
                     </div>
-                    <div class="font_b color3">
+                    <div class="font_b color32">
                         <i class="fa-regular fa-envelope"></i> email@domainname.com
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12 text text-white">
                     <div class="bold font_f">Subcribe newsletter</div>
-                    <div class="font_e color3 pt-3">Keep updated for new release and freebies. Enter your</div>
-                    <div class="font_e color3 pb-3">e-mail and subscribe to our newsletter</div>
+                    <div class="font_e color32 pt-3">Keep updated for new release and freebies. Enter your</div>
+                    <div class="font_e color32 pb-3">e-mail and subscribe to our newsletter</div>
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="" aria-label=""
                             aria-describedby="basic-addon2">
-                        <span class="input-group-text bg-danger text-white border_n" id="basic-addon2">subscribe</span>
+                        <span class="input-group-text bg_button text-white border_n" id="basic-addon2">subscribe</span>
                     </div>
                 </div>
             </div>
