--- a/sarupriya/Bootstrap/index.html
+++ b/sarupriya/Bootstrap/index.html
@@ -34,34 +34,34 @@
     </div>
     <div class="container">
         <div class="row p-3 txt_align">
-            <div class="col-md-5 col-sm-12 col- bold font_f">
+            <div class="col-md-5 col-sm-12 col- bold font_f width5 width6">
                 <i class="fa-solid fa-square text text-danger font_bc"></i><i
                     class="fa-solid fa-square color_a font_bc"></i>
                 ETERNA
             </div>
-            <div class="col-md-2 col-sm-12 col- txt_r p-2 txt_align">
+            <div class="col-md-2 col-sm-12 col- txt_r p-2 txt_align width5 width6">
                 <button type="button" class="bg_o bold font_ab border_n text text-white"><a><i 
                     class="fa-solid fa-house"></i>
                         Home <i class="fa-solid fa-angle-down font_c"></i></a>
                 </button>
             </div>
-            <div class="col-md-1 col-sm-12 col- txt_r p-2 txt_align">
+            <div class="col-md-1 col-sm-12 col- txt_r p-2 txt_align width5 width6">
                 <div class="font_bc margin_a">Feature <i
                             class="fa-solid fa-angle-down font_c"></i></div>
             </div>
-            <div class="col-md-1 col-sm-12 col- txtalign p-2">
+            <div class="col-md-1 col-sm-12 col- txtalign p-2 width5 width6">
                 <div type="button" class="font_bc">Pages <i
                             class="fa-solid fa-angle-down font_c"></i></div>
             </div>
-            <div class="col-md-1 col-sm-12 col- p-2">
+            <div class="col-md-1 col-sm-12 col- p-2 txt_align width5 width6">
                 <div type="button" class="font_bc">Portfolio <i
                             class="fa-solid fa-angle-down font_c"></i></div>
             </div>
-            <div class="col-md-1 col-sm-12 txtalign col- p-2">
+            <div class="col-md-1 col-sm-12 txtalign col- p-2 width5 width6">
                 <div type="button" class="font_bc">Blog <i
                             class="fa-solid fa-angle-down font_c"></i></div>
             </div>
-            <div class="col-md-1 col-sm-12 col- p-2">
+            <div class="col-md-1 col-sm-12 col- p-2 width5 width6">
                 <div type="button" class="font_bc">Contact </div>
             </div>
         </div>
@@ -125,7 +125,7 @@
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6 nofloat">
+                <div class="col-md-3 col-sm-6 nofloat width2">
                     <div class="bg_j p-4">
                         <div class="pb-4 txtalign font_f color3">Very
                             <span class="bold text text-white">Basic</span>
@@ -146,13 +146,13 @@
                         Stop anytime easily
                     </div>
                     <div class="bg_a p-4">
-                        <div class="txtalign">
+                        <div class="txtalign width3 margin1">
                             <button type="button" class="bg_button text text-white border_n p-1 width_b "> <i
                                     class="fa-solid fa-angle-down font_size bold"></i> Sign Up </button>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 nofloat">
+                <div class="col-md-3 col-sm-6 nofloat width2" >
                     <div class="bg_j p-4">
                         <div class="pb-4 txtalign font_f color3">Simple
                             <span class="bold text text-white ">Choice</span>
@@ -173,13 +173,13 @@
                         Stop anytime easily
                     </div>
                     <div class="bg_a p-4">
-                        <div class="txtalign">
+                        <div class="txtalign width3 margin1">
                             <button type="button" class="bg_button text text-white border_n p-1 width_b "> <i
                                     class="fa-solid fa-angle-down font_size bold"></i> Sign Up </button>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 nofloat">
+                <div class="col-md-3 col-sm-6 nofloat width2">
                     <div class="bg_k p-4">
                         <div class="pb-4 txtalign font_f color3">Special
                             <span class="bold text text-white ">Choice</span>
@@ -200,13 +200,13 @@
                         Stop anytime easily
                     </div>
                     <div class="bg_f p-4">
-                        <div class="txtalign">
+                        <div class="txtalign  width3 margin1">
                             <button type="button" class="bg_button text text-white border_n p-1 width_b "> <i
                                     class="fa-solid fa-angle-down font_size bold"></i> Sign Up </button>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 nofloat">
+                <div class="col-md-3 col-sm-6 nofloat width2">
                     <div class="bg_dark1 p-4">
                         <div class="bg_dark1 pb-4 txtalign font_f color3">Just
                             <span class="bold text text-white">Happy</span>
@@ -227,7 +227,7 @@
                         Stop anytime easily
                     </div>
                     <div class="bg_a p-4">
-                        <div class="txtalign">
+                        <div class="txtalign width3">
                             <button type="button" class="bg_button text text-white border_n p-1 width_b "> <i
                                     class="fa-solid fa-angle-down font_size bold"></i> Sign Up </button>
                         </div>
@@ -271,16 +271,16 @@
     <div class="container-fluid pb-5">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-12 nofloat width2 margin1">
+                <div class="col-md-3 col-sm-6 nofloat width4">
                     <img src="img5.jpg" alt="Image 1" height="175px" width="100%">
                 </div>
-                <div class="col-md-3 col-sm-12 nofloat width2 margin1">
+                <div class="col-md-3 col-sm-6 nofloat width4">
                     <img src="img6.jpg" alt="Image 1" height="175px" width="100%">
                 </div>
-                <div class="col-md-3 col-sm-12 nofloat width2 margin1">
+                <div class="col-md-3 col-sm-6 nofloat width4">
                     <img src="img7.jpg" alt="Image 1" height="175px" width="100%">
                 </div>
-                <div class="col-md-3 col-sm-12 nofloat width2 margin1">
+                <div class="col-md-3 col-sm-6 nofloat width4">
                     <img src="img8.jpg" alt="Image 1" height="175px" width="100%">
                 </div>
             </div>
@@ -296,7 +296,7 @@
                     <div class="font_e color32 pb-2">Privacy policy</div>
                     <div class="font_e color32 pb-2">Press release</div>
                     <div class="font_e color32 pb-2">What we have done</div>
-                    <div class="font_e color3 pb-2">Our support forum</div>
+                    <div class="font_e color32 pb-2">Our support forum</div>
                 </div>
                 <div class="col-md-4 col-sm-12 text text-white">
                     <div class="bold font_f">Get in touch</div>
@@ -323,14 +323,14 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid bg_dark">
-        <div class="container text text-white pt-4">
-            <div class="row">
+    <div class="container-fluid bg_dark pt-4">
+        <div class="container text text-white">
+            <div class="row txt_align nofloat">
                 <div class="col-md-6 col-sm-12 font_e">©Eterna company.All rights reserved</div>
-                <div class="col-md-6 col-sm-12 font_e text-end">Designed by BootstrapMade</div>
+                <div class="col-md-6 col-sm-12 font_e txt_r txt_align nofloat">Designed by BootstrapMade</div>
             </div>
         </div>
-        <div class="text-end">
+        <div class="txt_r nofloat">
             <i class="fa-solid fa-angle-down font_f pt-2 pb-1 txtalign down"></i>
         </div>
     </div>
