--- a/gayathri/tem4/task2.html
+++ b/gayathri/tem4/task2.html
@@ -7,20 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="border margin padding bgcolor margin_auto width text_indent">Page Header</div>
-    <div class="border margin padding bgcolor margin_auto width text_indent">Nav</div>
-    <div class="border margin padding bgcolor margin_auto width text_indent">
-      <div class="float_left width60 border padding1 bgcolor">
-         <div class="padding">Article</div>
-         <div class="margin padding bgcolor1 margin_auto width text_indent">Article Header</div>
-         <div class="margin padding2 bgcolor1 margin_auto width text_indent">Main</div>
-      </div>
-      <div class="float_right width30">
-         <div class="border margin padding margin_auto width text_indent">Aside</div>
-      </div>
-    <div style="clear: both;"></div>
-    </div>
-    <div class="border margin padding4 bgcolor margin_auto width text_indent">Section</div>
-    <div class="border margin padding bgcolor margin_auto width text_indent">Footer</div>
+  <div class="margin padding bgcolor margin_auto width text_indent">Page Header</div>
+  <div class="margin padding bgcolor margin_auto width text_indent">Nav</div>
+
+  <div class="margin padding bgcolor margin_autoB width text_indent float_left width68  padding1 bgcolor">
+      <div class="padding">Article</div>
+      <div class="margin padding bgcolor1 margin_auto width text_indent">Article Header</div>
+      <div class="margin padding2 bgcolor1 margin_auto width text_indent">Main</div>
+  </div>
+  <div class=" float_right widthA marginA paddingA  bgcolor margin_autoA">
+      <div class="margin_auto text_indentA padding">Aside</div>
+  </div>
+  <div style="clear: both;"></div>
+
+  <div class="margin padding4 bgcolor margin_auto width text_indent">Section</div>
+  <div class="margin padding bgcolor margin_auto width text_indent">Footer</div>
 </body>
 </html>
