final bootstrap file  update

--- a/sarupriya/Bootstrap/index.html
+++ b/sarupriya/Bootstrap/index.html
@@ -53,7 +53,7 @@
                 <div type="button" class="font_bc">Pages <i
                             class="fa-solid fa-angle-down font_c"></i></div>
             </div>
-            <div class="col-md-1 col-sm-12 col- p-2 txt_align">
+            <div class="col-md-1 col-sm-12 col- p-2 txt_align ">
                 <div type="button" class="font_bc">Portfolio <i
                             class="fa-solid fa-angle-down font_c"></i></div>
             </div>
@@ -306,7 +306,7 @@
                     <div class="font_e color32">
                         <i class="fa-solid fa-phone pt-3"></i> (123)456-7890 - (123)555-7891
                     </div>
-                    <div class="font_b color32">
+                    <div class="font_e color32">
                         <i class="fa-regular fa-envelope"></i> email@domainname.com
                     </div>
                 </div>
