--- a/abinash/template 6/index.html
+++ b/abinash/template 6/index.html
@@ -16,16 +16,14 @@
       <div class="width_a margin_a">
         <div class="float_left width_l1">
           <div class="float_left width_l1">
-            <div class="">
-              <img src="img_g.jpeg" alt="Guitar" height="80px" width="100%">
-            </div>
+            <img src="img_g.jpeg" alt="Guitar" height="100px" width="100%">
           </div>
           <div class="float_right width_r1">
             <div class="padding font_size bg_color">SoundAMP</div>
           </div>
           <div style="clear: both;"></div>
         </div>
-        <div class="padding1">
+        <div class="padding">
           <div class="float_right width_right">
             <div class="float_left width_l2">
               <div class="font">
@@ -58,9 +56,9 @@
         <h1 class="margin_r2 padding7 font_size3">ALL EVENT</h1>
       </div>
     </div>
-    <div class=" width_b margin_a">
-      <div class="float_left width_l3">
-        <div class="margin border margin_r3 bg_color2">
+    <div class=" width_b  margin_a">
+      <div class="float_left width_l3 margin_r3">
+        <div class="margin border bg_color2">
           <img src="img_1.jpeg" alt="night laser" height="200px" width="100%">
           <div class="width_c margin_a padding5  ">
             <div class="font_color">10/05/2018 <br></div>
@@ -72,10 +70,10 @@
           </div>
         </div>
       </div>
-      <div class="float_left width_l3">
-        <div class="margin border margin_r3 bg_color2">
+      <div class="float_left width_l3 margin_r3">
+        <div class="margin border bg_color2">
           <img src="img_2.jpeg" alt="live music" height="200px" width="100%">
-          <div class="width_c margin_a padding5  ">
+          <div class="width_c margin_a padding5 ">
             <div class="font_color">14/05/2018 <br></div>
             <div class="font_size2 padding6">Live music <br></div>
             <div class="font_color">#live #rock #alternative <br></div>
@@ -84,10 +82,10 @@
           </div>
         </div>
       </div>
-      <div class="float_left width_l3">
-        <div class="margin  border margin_r3  bg_color2">
+      <div class="float_left width_l3 margin_r3">
+        <div class="margin border bg_color2">
           <img src="img_3.jpeg" alt="Master class" height="200px" width="100%">
-          <div class="width_c margin_a padding5  ">
+          <div class="width_c margin_a padding5 ">
             <div class="font_color">10/04/2018 <br></div>
             <div class="font_size2 padding6">DJ-Master Class <br></div>
             <div class="font_color">#dj #master-class <br></div>
@@ -98,7 +96,7 @@
         </div>
       </div>
       <div class="float_right width_l3">
-        <div class=" margin border  bg_color2">
+        <div class=" margin border bg_color2">
           <img src="img_4.jpeg" alt="night party" height="200px" width="100%">
           <div class="width_c margin_a padding5">
             <div class="font_color">10/04/2018 <br></div>
@@ -112,6 +110,7 @@
       <div style="clear: both;"></div>
       <div class="margin_bottom"></div>
     </div>
+  </div>
   </div>
 </body>
 
