--- a/gayathri/tem4/task3.html
+++ b/gayathri/tem4/task3.html
@@ -7,26 +7,28 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="margin padding bgcolor1 margin_auto width text_indent">Page Header</div>
-    <div class="margin padding bgcolor1 margin_auto width text_indent">Nav</div>
-    <div class="margin padding margin_auto width text_indent">
-       <div class="float_left width60 padding1 bgcolor1">
-          <div class="text_center padding">Article</div>
-          <div class="margin padding bgcolor2 margin_auto width text_indent">Article Header</div>
-          <div class="margin padding3 bgcolor2 margin_auto width text_indent">Main</div>
-    <div class="margin padding bgcolor1 margin_auto width text_indent">Section</div>
+   <div class="margin padding bgcolor1 margin_auto width text_indent bgcolor">Page Header</div>
+   <div class="margin padding bgcolor1 margin_auto width text_indent">Nav</div>
+   <div class="margin padding margin_auto width text_indent">
+<div>
+       <div class="float_left width68 padding bgcolor1">
+           <div class="text_center padding">Article</div>
+           <div class="margin padding bgcolor2 margin_auto width text_indent">Article Header</div>
+           <div class="margin padding3 bgcolor2 margin_auto width text_indent">Main</div>
+      
+           <div class="margin border padding bgcolor1 margin_auto width text_indent">Section</div>
        </div>
-       <div class="float_right width30">
-          <div class="float_left width12">
-             <div class="margin padding bgcolor1">Aside</div>
-          </div>
-          <div class="float_right width12">
-             <div class="margin padding bgcolor1">Aside</div>
-          </div>
-          <div class="margin padding4 bgcolor1">Aside</div>
-        </div>
-    <div style="clear: both;"></div>
-    </div>
-    <div class="margin padding bgcolor1 margin_auto width text_indent">Footer</div>
+       <div class="float_right width30 aside_container">
+           <div class="aside_left width48 height1">
+               <div class="margin padding3 bgcolor1 aside_contentA">Aside</div>
+           </div>
+           <div class="aside_right width48">
+               <div class="margin padding3 bgcolor1 aside_contentA">Aside</div>
+           </div>
+           <div class="margin padding bgcolor1 third_aside aside_contentB">Aside</div>
+       </div>
+       <div style="clear: both;"></div></div>
+   </div>
+   <div class="margin padding bgcolor1 margin_auto width text_indent">Footer</div>
 </body>
 </html>
