update in template 7

--- a/devi/template_7/template_7.html
+++ b/devi/template_7/template_7.html
@@ -19,7 +19,7 @@
             several different blocks</span>
     </div>
     </div>
-    <div class="bg_color1 font_type padding1 txt_align1">
+    <div class="bg_color1 font_type padding1">
         <div class="width1 margin_0">
             <span
                 class="button border_right display_block1">Home</span>
@@ -39,7 +39,7 @@
         <div class="floatr width_80 nofloat1 ">
             <div class="width2 margin_0">
                 <div class="font_size2 padding4">About</div>
-                <div class="width_80 line_spacing">
+                <div class="width_80 line_spacing padding5">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Tempora quia beatae consequuntur magnam praesentium omnis
                     animi ipsam corrupti porro nobis perferendis repudiandae
@@ -69,7 +69,7 @@
                 <div class="width2 margin_0">
                     <div class="text_color2 font_size4 padding4">How We Work</div>
                     <div class="font_size3">
-                        <div class="padding5 line_spacing">
+                        <div class="padding5 line_spacing ">
                             Lorem ipsum dolor sit amet consectetur
                             adipisicing elit. Tempora quia beatae
                             consequuntur
