--- a/vigneshwaran/index.html
+++ b/vigneshwaran/index.html
@@ -9,7 +9,15 @@
 <body>
     <div class="text barder margin padding">HEAD</div>
     <div class="text barder margin padding">NAVIGATION</div>
-    <div class="text barder margin padding">CONTENT</div>
-    <div class="text barder">FOOTER</div>
+    <div class="margin">
+        <div class="float_left width">
+            <div class="text padding barder">LEFT</div>
+        </div>
+        <div class="float_right width ">
+           <div class="text padding barder"> RIGHT</div>
+        </div>
+        <div style="clear: both;"></div>
+    </div>
+    <div class="text barder padding">FOOTER</div>
 </body>
 </html>
